# plutau

./: Cargo.toml  README.md
src/: frq_parse.rs  lib.rs  lyrics.rs  main.rs  midi.rs  oto.rs  phoneme.rs  playing_sample.rs  sample_util.rs  sysex.rs
src/editor_vizia/: editor.rs  theme.css  visualizer.rs
