[package]
name = "plutau"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
hound = "3.5.0"
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }
nih_plug_vizia = { git = "https://github.com/robbert-vdh/nih-plug.git" }
rfd = "0.15"
serde = "1.0"
time = "0.3"
rubato = { git = "https://github.com/HEnquist/rubato.git", branch = "next-0.13" }
rtrb = "0.3.2"
tdpsola = "0.1.0"

[workspace]
members = ["xtask"]
